8233451: Add --enable-native-access=ALL-UNNAMED; clean up formatting